Version 6.2.1
- fixed SessionProvider to be compatible with 4.x MySQL, replaced TIMESTAMPDIFF with TIME_TO_SEC
  (bug#47219)
- implemented support for client SSL certificates
- fixed indexes schema collection so that it still works with bad table names such as b``a`d (bug #48101)
- fixed guid type so that multi-byte character sets will not effect how it works.  A column would be
  considered a guid if it has a *character* length of 36, not a *byte* length of 36 (bug #47985)
- fixed unsigned types in views when used as entities (bug # 47872) 
- now exposing the MySqlDecimal type along with GetMySqlDecimal methods on data reader (bug #48100)    
- applied user-suggested patch to enable type-safe cloning (bug #48460)
- fixed encrypt keyword that was no longer supported in connection strings. It is obsolete so
  new code should use the 'ssl mode'.  Encrypt will be removed entirely starting with 6.4 (bug #48290)

Version 6.2.0
- we now cleanup idle connections in the pool, if they were not used for too long
- refactored handling of connection and command timeouts
  to use timeout on the underlying stream
- completely refactored MySqlConnectionStringBuilder
- now supporting TableDirect command type
- refactored logging system to increase peformance, increase clarity of log, and setup for
  future features