@@ -28,6 +28,7 @@ using System.Reflection;
 using System.Text;
 #if !CF
 using System.ComponentModel.Design.Serialization;
+using System.Collections.Generic;
 #endif
 
 namespace MySql.Data.MySqlClient
@@ -57,6 +58,7 @@ namespace MySql.Data.MySqlClient
         private MySqlParameterCollection collection;
         IMySqlValue valueObject;
         private Encoding encoding;
+        private List<string> possibleValues;
 
         #region Constructors
 
@@ -336,6 +338,16 @@ namespace MySql.Data.MySqlClient
         private IMySqlValue ValueObject
         {
             get { return valueObject; }
+        }
+
+        /// <summary>
+        /// Returns the possible values for this parameter if this parameter is of type
+        /// SET or ENUM.  Returns null otherwise.
+        /// </summary>
+        public List<string> PossibleValues
+        {
+            get { return possibleValues; }
+            internal set { possibleValues = value; }
         }
 
         #endregion
